logs/structuredtext.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/StructuredText'...
Compiling './lib/python3.5/site-packages/StructuredText/ClassicDocumentClass.py'...
***   File "./lib/python3.5/site-packages/StructuredText/ClassicDocumentClass.py", line 185
    return '%s(%s)' % (self.__class__.__name__, `self._value`)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/StructuredText/ClassicStructuredText.py'...
***   File "./lib/python3.5/site-packages/StructuredText/ClassicStructuredText.py", line 530
    print 'Content-Type: text/html\n'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/StructuredText/StructuredText.py'...
***   File "./lib/python3.5/site-packages/StructuredText/StructuredText.py", line 51
    print HTML(open(f).read())
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/StructuredText/regressions'...
Listing './lib/python3.5/site-packages/StructuredText/tests'...
Compiling './lib/python3.5/site-packages/StructuredText/tests/testStructuredText.py'...
***   File "./lib/python3.5/site-packages/StructuredText/tests/testStructuredText.py", line 137
    raise AssertionError, \
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/StructuredText-2.11.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/deprecation'...
Listing './lib/python3.5/site-packages/zope/structuredtext'...
Listing './lib/python3.5/site-packages/zope/structuredtext/regressions'...
Listing './lib/python3.5/site-packages/zope.deprecation-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.structuredtext-4.2.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
